[gd_scene load_steps=6 format=3 uid="uid://mirrnx1k68w1"]

[ext_resource type="Script" path="res://Weapon/Cannon/30mm/Bullet.gd" id="1"]
[ext_resource type="Material" uid="uid://bqwec3q5qbb11" path="res://Weapon/Cannon/30mm/Bullet.material" id="2"]
[ext_resource type="AudioStream" uid="uid://bgn05j8ntxemf" path="res://Weapon/Cannon/30mm/258198__wadaltmon__thompson-smg-shot.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://bvp32mmc008s2" path="res://Weapon/Cannon/120mm/587195__derplayer__explosion-07-Short.ogg" id="4"]

[sub_resource type="SeparationRayShape3D" id="1"]
length = 0.336813

[node name="Bullet" type="Area3D"]
script = ExtResource("1")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.147822, 0, 0)
shape = SubResource("1")

[node name="CSGBox" type="CSGBox3D" parent="."]
size = Vector3(0.1, 0.02, 0.02)
material = ExtResource("2")

[node name="LifeTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Shot" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3")
autoplay = true

[node name="Hit" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4")
autoplay = true

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="Hit" to="." method="_on_Hit_finished"]
